feat: :sparkles: Estructura HTML terminada

--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coca cola</title>
+    <title>COCA COLA</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="left">
+            <h2>THAT'S WHAT I LIKE</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi dolorem perspiciatis laboriosam, neque officiis ipsum deleniti et quam possimus accusamus officia quidem aperiam impedit? Ipsa ut optio rerum! Officiis, itaque.</p>
+        </div>
+        <div class="content-button">
+            <button>ADD TO CARD</button>
+            <button>BUY NOW</button>
+        </div>
+        <div class="right">
+
+        </div>
+        <div class="header">
+            <h2 id="logo">PEPSI</h2>
+            <div class="menu">
+                <a href="">HOME</a>
+                <a href="">OUR PRODUCT</a>
+                <a href="">ABOUT</a>
+                <a href="">CONTACT</a>
+                <div class="media-shop"></div>
+            </div>
+        </div>
+        <img src="storage/img/pepsi.png" alt="">
+    </div>
 </body>
 </html>
