feat: :sparkles: Left side terminada

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="left">
-            <h2>THAT'S WHAT I LIKE</h2>
+            <h1>THAT'S WHAT I LIKE</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi dolorem perspiciatis laboriosam, neque officiis ipsum deleniti et quam possimus accusamus officia quidem aperiam impedit? Ipsa ut optio rerum! Officiis, itaque.</p>
         </div>
         <div class="content-button">
@@ -30,7 +30,7 @@
                 <div class="media-shop"></div>
             </div>
         </div>
-        <img src="storage/img/pepsi.png" alt="">
+        <img style="width:40%" src="storage/img/pepsi.png" alt="">
     </div>
 </body>
 </html>
