feat: :sparkles: Landing page terminada
Arregle los botones, la imagen de pepsi, y la social media

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <div class="left">
             <h1>THAT'S WHAT I LIKE</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi dolorem perspiciatis laboriosam, neque officiis ipsum deleniti et quam possimus accusamus officia quidem aperiam impedit? Ipsa ut optio rerum! Officiis, itaque.</p>
+            <div class="content-button">
+                <button>ADD TO CARD</button>
+                <button>BUY NOW</button>
+            </div>
         </div>
-        <div class="content-button">
-            <button>ADD TO CARD</button>
-            <button>BUY NOW</button>
-        </div>
+       
         <div class="right">
 
         </div>
@@ -27,10 +28,20 @@
                 <a href="">OUR PRODUCT</a>
                 <a href="">ABOUT</a>
                 <a href="">CONTACT</a>
-                <div class="media-shop"></div>
+            </div>
+            <div class="media-shop">
+                <a href="">
+                    <img src="./storage/img/shopping-bag.png" alt="">
+                </a>
+                <a href="">
+                    <img src="./storage/img/facebook-f.png" alt="">
+                </a>
+                <a href="">
+                    <img src="./storage/img/youtube.png" alt="">
+                </a>
             </div>
         </div>
-        <img style="width:40%" src="storage/img/pepsi.png" alt="">
     </div>
+        <img style="width:40%" src="storage/img/pepsi.png" alt="">
 </body>
 </html>
